	looks ugly.
	(tnt-buggy-idle): Added a variable tnt-buggy-idle which helps
	control whether we do idle handling.  It defaults to t so we do
	not do idle handling.  It should be some sort of complicated test
	to see if the bug exists.  For now, to override it, you must set
	it to nil *before* loading tnt.el since it controls the default
	setting of a later variable.

2000-04-10  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-handle-closed): now checking whether unidle-timer
	exists before canceling it, rather than when idle-timer exists.
	(tnt-handle-sign-on): uncommented out the unidle-timer.
	use-idle-timer is still defaulting to nil, so this doesn't really
	need to be commented out.
	(tnt-timers-available): added.  checks (fboundp 'run-at-time).
	(tnt-use-keepalive): now defaults to timers-available.
	(tnt-use-buddy-update-timer): now defaults to timers-available.
	(tnt-use-idle-timer): changed the note in the doc string to better
	describe the current bug.
	(tnt-email-binary): just made the doc string more grammatical and
	informative.

	* toc.el (toc-handle-receive): just fixed some whitespace.  i
	guess i'm as anal as john.

2000-04-07  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-send-idle): added.
	(tnt-send-unidle): added.  (currently does not get called properly
	when you become unidle.)
	(tnt-use-buddy-update-timer): added.
	(tnt-use-idle-timer): added.  (currently defaults to nil, because
	becoming unidle is not yet supported.)
	(tnt-idle-timer): added.
	(tnt-send-idle-after): added.
	(tnt-unidle-timer): added.
	(tnt-send-unidle-after): added.
	(tnt-currently-idle): added.
	(tnt-buddy-update-timer): added.
	(tnt-buddy-update-interval): added.
	(tnt-keepalive): now using a repeating timer object, rather than
	creating a new one each time.  for one thing, before we would have
	been unable to cancel the timer if we log out or get disco'ed
	before the first time it ran.  also there's no point in allocating